--- a/build.gradle
+++ b/build.gradle
@@ -1,34 +1,24 @@
-apply plugin: 'groovy'
-apply plugin: 'maven'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-version = '1.0.0'
-group = 'com.zeus.gradle.plugin'
-archivesBaseName = 'patch-gradle-plugin'
-
-repositories {
-    mavenCentral()
-    jcenter()
-}
-
-
-dependencies {
-    compile gradleApi()
-    compile localGroovy()
-    compile 'com.android.tools.build:gradle:1.5.0'
-    compile 'org.ow2.asm:asm:5.0'
-
-}
-
-// 一定要记得使用交叉编译选项，因为我们可能用很高的JDK版本编译，为了让安装了低版本的同学能用上我们写的插件，必须设定source和target
-compileGroovy {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
-    options.encoding = "UTF-8"
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        repository(url: 'file:release/libs')
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
+allprojects {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
